# AI-Devtools-Hack-

./: .env.example  .gitignore  ENTERPRISE_FEATURES.md  FIRST_RUN.md  HACKATHON_CHECKLIST.md  IMPLEMENTATION_STATUS.md  Makefile  QUICK_START_ENTERPRISE.md  README.md  TEST_RESULTS.md  docker-compose.yml  pyproject.toml  test_all.sh  test_full_pipeline.py  test_full_pipeline_github.py  test_hr.sh  test_hr_request_full.json  test_hr_simple.json  test_pipeline_simple.py
backend/: Dockerfile  main.py
backend/core/: config.py
backend/ml_integration/: client.py
backend/schemas/: agent.py  hr.py  mcp.py
backend/services/: ab_testing.py  advanced_market_analytics.py  advanced_resume_parser.py  batch_processor.py  cache.py  candidate_recommendations.py  communications.py  deduplication.py  feedback_loop.py  interview_support.py  job_description_generator.py  llm_resume_parser.py  market_analytics.py  matching.py  metrics.py  normalization.py  predictive_analytics.py  resume_parser.py  skill_requirements.py  smart_requirements.py
docs/: API_SCHEMA_GUIDE.md  GIT_SETUP.md  HACKATHON_GUIDE.md  MCP_BASICS.md  MCP_INTEGRATION.md  ML_INTEGRATION_GUIDE.md  ML_SAFETY.md  QUICKSTART_ML.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
frontend/: package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
ml/: Dockerfile
ml/agents/: __init__.py  registry.py
ml/examples/: example_agent.py  example_multiagent.py  example_tool.py
ml/mcp_server/: __init__.py  (+2 more)
protos/: agent_service.proto
scripts/: install-hooks.sh  pre-commit-hook.sh  test_setup.sh
(+17 files in other folders)
