[tool.poetry]
name = "ai-devtools-hack"
version = "0.1.0"
description = "MCP Server with AI Agents for Business Automation"
authors = ["Team"]
readme = "README.md"
packages = [{include = "backend"}, {include = "ml"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
aiohttp = "^3.9.0"

# ML Dependencies (managed by ML team)
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
openai = "^1.10.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
